LP2089597 Contrast issues in login form buttons
Several accessibility corrections to the Angular staff login form:
* Loads the dark mode toggle and sets color mode when not logged in
* Corrects background and border of the password visibility toggle
* Moves password visually-hidden message outside the input group to
  ensure that the input-group-text is the last child of the group and
  gets the correct border radius

Release-note: Fixes borders of staff login form button, password toggle

--- a/Open-ILS/src/eg2/src/styles.css
+++ b/Open-ILS/src/eg2/src/styles.css
@@ -503,6 +503,7 @@ button.input-group-text.text-danger {
 .input-group .btn:not([class*="btn-"]),
 .input-group .btn[class*="btn-outline-"] {
   background-color: var(--btn-gray-bg);
+  color: var(--bs-body-color);
 }
 
 .btn.btn-link {
